In kpanel-0.18:

    Patchlevel 7:
       - cleanups reverted (too many sideeffects). Nicer
         configuration dialog still included.

    Patchlevel 6:
       - cleanups and a nicer configuration dialog (Martin Scherbaum)

    Patchlevel 5:
       - fixed autohide with docking. Authide cares about
         popups now. The hiding will be delayed until the popup
         dissappears.
       - new property TaskbarButtonMinimumHorizontalSize.
         If this size cannot be ensured (too many tasks) the
         taskbar gets one more row.
       - taskbutton indicate with "..." if a label is too long

    Patchlevel 4:
       - First proof-of-concept implementation of docking
       - smooth swallowing (no more flickering a la fvwm :-)

    Patchlevel 3:
       - new commandline option: "-no-KDE-compliant-window-manager"
         forces startup regardless of the module communication.
       - new kpanelrc option "ClockAmPm=on/off"
       - added mini icons to the windowlist
       - fixes for the integrated clock (Mario Weilguni)
       - autohide feature for the taskbar
               AutoHideTaskbar=on/off
         The provisional panel config dialog also offers a checkbox
         for this feature.

    Patchlevel 2:
       - autohide feature for the panel
               AutoHide=on/off
         The provisional panel config dialog also offers a checkbox
         for this feature.
       - K-Button does not need to be the very first anymore. I even
         cannot remember why I implemented this contrain some time ago....

    Patchlevel 1:
       - taskbar uses the default font now. Changes during runtime
         handling fixed.
       - texture support "BackgroundTexture=<file>" (Thanks to 
         Donavan Stanley)
       - some fixes for swallowing (needs kwm >= 0.10.19 to work)

    Patchlevel 0:
       - new icons 
       - visual changes to work well with the new icons
          * better scaling (no longer scale_factor). Uses the mini